Fixed some spacing on the panels and made cursor turn to grab for the attributes

--- a/model-editor/app/styles/app.css
+++ b/model-editor/app/styles/app.css
@@ -19,6 +19,11 @@
   cursor: pointer;
 }
 
+.grab:hover {
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+}
+
 .cursor--default:hover {
   cursor: default;
 }
