--- a/model-editor/app/styles/content-area.css
+++ b/model-editor/app/styles/content-area.css
@@ -1,11 +1,10 @@
 .content-area--title {
+  position: absolute;
   text-align: center;
 
   top: 0px;
   right: 0px;
   left: 0px;
-
-  min-height: calc(3px + 7%);
 
   border-bottom: 1px solid grey;
 }
@@ -75,7 +74,7 @@
 
   z-index: -10;
 
-  top: calc(3px + 7%);
+  top: calc(3px + 5%);
 }
 
 .graph-area--with-config {
